# Graphics_Project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FireSimulator.sln  FireSimulator.vcxproj  FireSimulatorExecutable  README.md  final_report.md  imgui.ini  plan.md
includes/imgui/: imgui_impl_glfw.cpp
src/: BillboardRenderer.cpp  BillboardRenderer.h  Camera.cpp  Camera.h  Config.cpp  Config.h  FluidSolver3D.cpp  FluidSolver3D.h  FluidSystem.cpp  FluidSystem.h  MeshLoader.cpp  MeshLoader.h  NavierStokes.cpp  Particles.cpp  Particles.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  UI.cpp  UI.h  VolumeRenderer.cpp  VolumeRenderer.h  main.cpp  shader.h  shaderSource.h
